--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0px 0px;
+    }
+
 #header {
     background-image: url(../img/pattern.png);
     background-repeat: repeat-x;
@@ -9,4 +14,39 @@
     height: 60px;
     position: absolute; 
     top: 90px;
+    padding: 0px 10px;
+}
+
+.testo1 {
+    font-family: 'Times New Roman';
+    font-size: 17px;
+    color: grey;
+    margin: 0%;
+}
+
+.testo2 {
+    color: #0570a1;
+}
+
+.testo3 {
+    font-family: 'Times New Roman';
+    font-size: 12px;
+    color: grey;
+    margin: 0%;
+}
+
+.testo4 {
+    font-family: 'Times New Roman';
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.paragrafo {
+    font-family: 'Times New Roman';
+    font-size: 18px;
+    margin: 30px 0px;
+}
+
+.testo5 {
+    background:#FFFF00;
 }
