--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0px 0px;
-    }
-
 #header {
     background-image: url(../img/pattern.png);
     background-repeat: repeat-x;
@@ -50,3 +45,52 @@
 .testo5 {
     background:#FFFF00;
 }
+
+table {
+    border-collapse: collapse;
+    text-align: left;
+    }
+
+.testa_tabella {
+    background-color: #6cc7ed;
+    color: whitesmoke;
+    padding: 0px 10px;
+}
+
+.corpo_tabella {
+    background-color: lightblue;
+    padding: 0px 10px;
+}
+
+.colonna-25 {
+    width: 25%;
+    height: 10%;
+}
+
+h3 {
+    font-family: 'Times New Roman';
+    font-size: 20px;
+    color: grey;
+    
+}
+
+h2 {
+    font-family: 'Times New Roman';
+    position:relative;
+    color: white;
+    top: 10px;
+    left: 10px;
+}
+
+.image1 {
+    background-image: url(../img/monitor.jpg);
+    background-repeat: no-repeat;
+    height: 208px;
+}
+
+.image2 {
+    background-image: url(../img/graph.jpg);
+    background-repeat: no-repeat;
+    height: 207px;
+}
+
